--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -55,3 +55,4 @@
 
 <!-- SCRIPTS -->
 <%- partial('_partial/scripts.ejs') %>
+  <script src="https://cdn.jsdelivr.net/npm/pjax@0.2.8/pjax.js"></script>
