--- a/themes/fluid/layout/layout.ejs
+++ b/themes/fluid/layout/layout.ejs
@@ -90,13 +90,13 @@ var banner_mask_alpha = page.banner_mask_alpha || theme.index.banner_mask_alpha
   <%- partial('_partial/footer', { data: { 'subtitle': subtitle } }) %>
   <script>
     // pjax
-    var pjax = new Pjax({
-    selectors: [
-      "title",
-      "main",
-      "header",
-    ]
-   })
+  //   var pjax = new Pjax({
+  //   selectors: [
+  //     "title",
+  //     "main",
+  //     "header",
+  //   ]
+  //  })
 
           //加载valine
    function LoadValine(){
